--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Szerelmemnek</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Üdvözöllek a weboldalamon!</h1>
-    <p>Ezt az oldalt a GitHub Pages segítségével hoztam létre.</p>
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Szerelmemnek</h1>
+            <p>Te vagy a napfény az életemben, és ezt az oldalt neked szenteltem.</p>
+            <a href="#story" class="btn">Fedezd fel</a>
+        </div>
+    </header>
+    <main>
+        <section id="story" class="story">
+            <h2>A mi történetünk</h2>
+            <p>Egy nap találkoztunk, és minden megváltozott. Azóta te vagy az, aki mosolyt csal az arcomra, és boldoggá teszi a napjaimat.</p>
+        </section>
+        <section class="gallery">
+            <h2>Kedvenc pillanataink</h2>
+            <div class="image-grid">
+                <img src="https://via.placeholder.com/300" alt="Pillanat 1">
+                <img src="https://via.placeholder.com/300" alt="Pillanat 2">
+                <img src="https://via.placeholder.com/300" alt="Pillanat 3">
+            </div>
+        </section>
+        <section class="contact">
+            <h2>Üzenet neked</h2>
+            <p>Mindig itt leszek melletted, és soha nem hagylak el. Szeretlek!</p>
+        </section>
+    </main>
+    <footer>
+        <p>Készítette: A te szerelmed</p>
+    </footer>
 </body>
 </html>
