--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
     </section>
     <section>
         <h2>Várjuk, hogy találkozhassunk</h2>
-        <p><strong>Mikor</strong></p>
-        <p>Péntek, 14:15 - Hejobába Iskola</p>
-        <p>Szombat, 12:15 - Nemesbikk</p>
+        <p id="location"></p> <!-- Helyszín és időpont szövege -->
         <div id="countdown">
             <h3>Visszaszámlálás:</h3>
             <p id="timer"></p>
         </div>
+    </section>
+    <section>
+        <h2>Megható szerelmes idézet</h2>
+        <blockquote>
+            "A szerelem nem egy érzés, hanem egy döntés. Az a döntés, hogy minden nap melletted állok, és veled együtt építem a jövőnket. Mert te vagy az én örök nyaram, akivel minden pillanatom teljes."
+        </blockquote>
     </section>
     <section>
         <h2>Üzenetem</h2>
